--- a/Frontend/Resources/css/mystyles.css
+++ b/Frontend/Resources/css/mystyles.css
@@ -5,12 +5,15 @@ body {
     background-image: url(https://r4.wallpaperflare.com/wallpaper/123/702/385/technology-bitcoin-coin-cryptocurrency-money-hd-wallpaper-e8d2f517c29e74cd1878dceaf7a39c66.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+    filter: brightness(0.5);
 }
 
 .ticker-container {
     overflow: hidden;
     position: relative;
     background-color: #333;
+    background-attachment: fixed;
     color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -130,7 +133,41 @@ body {
     border-color: #000;
     border-radius: 50px;
     line-height: 0.8;
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 255, 255, 0.7);
     font-size: large;
 
 }
+
+.text-container1 {
+    display: inline-block;
+    margin-left: 315px;
+    padding: 20px;
+    border-width: 4px;
+    border-color: #000;
+    border-radius: 50px;
+    line-height: 0.8;
+    background-color: rgba(255, 255, 255, 0.7);
+    font-size: large;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+}
+
+a:hover {
+    color: red;
+}
+
+.text-container2 {
+    text-align: center;
+    margin: 10px;
+    padding: 20px;
+    border-width: 4px;
+    border-color: #000;
+    border-radius: 50px;
+    line-height: 0.8;
+    background-color: rgba(255, 255, 255, 0.7);
+    font-size: large;
+}
+
