--- a/frontend/Resources/css/Dash.css
+++ b/frontend/Resources/css/Dash.css
@@ -1,9 +1,13 @@
 body {
     font-family: Arial, sans-serif;
 }
+label {
+    margin-left: 10%;
+}
 .textarea {
     margin-top: 10px;
-    width: 60%;
+    width: 40%;
+    resize: none;
     padding: 10px;
     border: 2px solid #000000;
     border-radius: 4px;
@@ -81,9 +85,28 @@ transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 
 .buttons:hover:after {
 top: -45%;
-background-color: #d42626;
+background-color: #3d020f;
 transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
+
+.buttoner {
+    background-color: #84010a;
+    color: antiquewhite;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 10%;
+    font-size: large;
+    margin: 4px 2px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+.buttoner.clicked {
+    background-color: green;
+}
+
 .navigation-bar {
 margin-top: 30px;
 position: fixed;
@@ -139,12 +162,15 @@ margin: 0 auto;
 .account-balance-section {
 /* Add your account balance section styles here */
 }
-.account-balance-section .h4 {
-    margin-left: 10%;
-    color: #5c6bc0;
-}
+
 .account-detail-section {
 /* Add your account detail section styles here */
+}
+
+.titler {
+    margin-left: 10%;
+    color: #5c6bc0;
+    font-size: large;
 }
 
 .current-balance {
@@ -220,4 +246,41 @@ margin: 0 auto;
     display: block;
     margin-top: 10px;
     font-size: 24px;
+}
+
+.text-container2 {
+    margin-left: 10%;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fill, minmax(100%,2fr));
+    gap: 70px;
+}
+.box2 {
+    background-color: #3d020f;
+    color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: left;
+    font-size: 18px;
+    font-weight: bold;
+}
+.box2 span {
+    display: block;
+    margin-top: 10px;
+    font-size: 24px;
+}
+
+.center {
+    text-align: center;
+}
+
+.contact {
+    margin-top: 5%;
+    bottom: 0;
+    width: 100%;
+    margin-left: 5%;
+    text-align: justify;
+    height: auto;
+    padding: 20px;
+    background-image: linear-gradient(to bottom right, rgb(88, 21, 21), rgb(9, 9, 9));
 }
