--- a/frontend/Resources/css/mystyles.css
+++ b/frontend/Resources/css/mystyles.css
@@ -6,7 +6,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    filter: brightness(0.5);
+    /*filter: brightness(0.5);*/
 }
 
 .ticker-container {
