--- a/frontend/Resources/css/Dash.css
+++ b/frontend/Resources/css/Dash.css
@@ -471,7 +471,7 @@ tbody td {
 }
 
 .transaction-filter {
-    background-color: #f08000;
+    background-color: #470202;
     padding: 20px;
     border-radius: 8px;
     max-width: 800px;
@@ -497,14 +497,14 @@ tbody td {
     padding: 10px;
     border: none;
     border-radius: 4px;
-    background-color: #ffa500;
+    background-color: #7c0303;
     color: white;
     font-size: 16px;
 }
 
 .go-btn {
     padding: 10px 20px;
-    background-color: #28a745;
+    background-color: #c90f0f;
     color: white;
     border: none;
     border-radius: 4px;
@@ -514,7 +514,7 @@ tbody td {
 }
 
 .transaction-list {
-    max-width: 800px;
+    max-width: 56%;
     margin: 20px auto;
     background-color: white;
     border-radius: 8px;
@@ -534,7 +534,7 @@ th, td {
 }
 
 th {
-    background-color: #f08000;
+    background-color: #470202;
     color: white;
     font-size: 18px;
 }
@@ -550,7 +550,7 @@ td[colspan="3"] {
 }
 
 tfoot td {
-    background-color: #f08000;
+    background-color: #470202;
     color: white;
     font-size: 18px;
     text-align: right;
@@ -559,4 +559,28 @@ tfoot td {
 
 tfoot .total-amount {
     text-align: left;
+}
+
+.referrals-container {
+    background-color: rgba(255, 255, 255, 0.8);
+    margin-left: 10%;
+    padding: 20px;
+    border-radius: 10px;
+    width: 90%;
+}
+.referrals-container h2 {
+    text-align: left;
+    margin-bottom: 20px;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+th, td {
+    padding: 10px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+tr:last-child td {
+    border-bottom: none;
 }
