--- a/frontend/Resources/css/Dash.css
+++ b/frontend/Resources/css/Dash.css
@@ -240,7 +240,7 @@ margin: 0 auto;
     gap: 70px;
 }
 .box1 {
-    background-color: #5c6bc0;
+    background-color: #808080;
     color: #fff;
     padding: 20px;
     border-radius: 8px;
@@ -251,7 +251,35 @@ margin: 0 auto;
 .box1 span {
     display: block;
     margin-top: 10px;
-    font-size: 24px;
+    font-size: 24px;   
+}
+.box3 {
+    background-color: #a18a05;
+    color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+}
+.box3 span {
+    display: block;
+    margin-top: 10px;
+    font-size: 24px;    
+}
+.box4 {
+    background-color: #800080;
+    color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+}
+.box4 span {
+    display: block;
+    margin-top: 10px;
+    font-size: 24px;   
 }
 
 .text-container2 {
@@ -584,3 +612,31 @@ th, td {
 tr:last-child td {
     border-bottom: none;
 }
+
+.footer {
+    margin-top: 10px;
+    position: sticky;
+    bottom: 0;
+    left: 10%;
+    height: 17vh;
+    width: 89%;
+    border-radius: 10px;
+    background-color: #3f0000; /* Adjust background color */
+    padding: 5px;
+    text-align: center;
+    }
+.footer5 {
+    color: #007bff;
+    font-size: large;
+}
+.footlink {
+    position: relative;
+    padding: 10px;
+    margin: 10%;
+    transition: background-color 0.3s;
+    }
+    .footlink img {
+    width: 5%; /* Adjust icon size */
+    height: 30%;
+    margin: 10px;
+    }
